[gd_scene load_steps=7 format=2]

[ext_resource path="res://weapons/moss.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/greenbow.png" type="Texture" id=2]
[ext_resource path="res://weapons/swordaea.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.4213, 43.9949 )

[sub_resource type="CircleShape2D" id=2]
radius = 78.2038

[sub_resource type="CircleShape2D" id=3]
radius = 89.252

[node name="moss" type="Sprite" groups=[
"projectile",
]]
position = Vector2( -0.590302, -25.1962 )
rotation = 3.14159
scale = Vector2( -1, 1 )
z_index = 5
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 186.62, 239.235, 14.2355, 25.8827 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="." groups=[
"damagebox",
"moss",
]]
position = Vector2( -16.25, -1.62493 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 15.811, -2.32779 )
shape = SubResource( 1 )
disabled = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D2" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0.630667, -3.57381 )
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( -0.396853, -0.992125 )
scale = Vector2( 30, 30 )
shape = SubResource( 3 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D2_area_exited"]
[connection signal="area_entered" from="Area2D3" to="." method="_on_Area2D3_area_entered"]
[connection signal="area_exited" from="Area2D3" to="." method="_on_Area2D3_area_exited"]
